// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Frame /> Snapshots should mount without exploding as Frame 1 1`] = `
<Frame
  fn={[Function]}
  name="activity"
  next={[Function]}
  text="What activity are you working on?"
  value=""
>
  <FlexContainer>
    <div
      className="jsx-2081515553 "
    >
      <SubTitle
        text="What activity are you working on?"
      >
        <h2>
          What activity are you working on?
        </h2>
      </SubTitle>
      <Input
        fn={[Function]}
        name="activity"
        value=""
      >
        <Fragment>
          <input
            name="activity"
            onChange={[Function]}
            type="text"
            value=""
          />
        </Fragment>
      </Input>
      <Button
        className="next"
        fn={[Function]}
        text="Next"
      >
        <button
          className="next"
          onClick={[Function]}
        >
          Next
        </button>
      </Button>
      <JSXStyle
        css="div.jsx-2081515553{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.layout.jsx-2081515553{margin:auto;max-width:50em;min-height:100vh;}.main.jsx-2081515553{background-color:lightblue;height:65vh;padding:2em 3em;}"
        styleId="2081515553"
      />
    </div>
  </FlexContainer>
</Frame>
`;

exports[`Component: <Frame /> Snapshots should mount without exploding as Frame 2 1`] = `
<Frame
  fn={[Function]}
  name="timer"
  next={[Function]}
  prev={[Function]}
  text="How long should the timer be?"
  value=""
>
  <FlexContainer>
    <div
      className="jsx-2081515553 "
    >
      <SubTitle
        text="How long should the timer be?"
      >
        <h2>
          How long should the timer be?
        </h2>
      </SubTitle>
      <Input
        fn={[Function]}
        name="timer"
        value=""
      >
        <Fragment>
          <input
            name="timer"
            onChange={[Function]}
            type="text"
            value=""
          />
        </Fragment>
      </Input>
      <Fragment>
        <Button
          className="next"
          fn={[Function]}
          text="Next"
        >
          <button
            className="next"
            onClick={[Function]}
          >
            Next
          </button>
        </Button>
        <Button
          className="prev"
          fn={[Function]}
          text="Prev"
        >
          <button
            className="prev"
            onClick={[Function]}
          >
            Prev
          </button>
        </Button>
      </Fragment>
      <JSXStyle
        css="div.jsx-2081515553{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.layout.jsx-2081515553{margin:auto;max-width:50em;min-height:100vh;}.main.jsx-2081515553{background-color:lightblue;height:65vh;padding:2em 3em;}"
        styleId="2081515553"
      />
    </div>
  </FlexContainer>
</Frame>
`;

exports[`Component: <Frame /> Snapshots should mount without exploding as Frame 3 1`] = `
<Frame
  fn={[Function]}
  name="cooldown"
  next={[Function]}
  prev={[Function]}
  text="How long should the cooldown be?"
  value=""
>
  <FlexContainer>
    <div
      className="jsx-2081515553 "
    >
      <SubTitle
        text="How long should the cooldown be?"
      >
        <h2>
          How long should the cooldown be?
        </h2>
      </SubTitle>
      <Input
        fn={[Function]}
        name="cooldown"
        value=""
      >
        <Fragment>
          <input
            name="cooldown"
            onChange={[Function]}
            type="text"
            value=""
          />
        </Fragment>
      </Input>
      <Fragment>
        <Button
          className="next"
          fn={[Function]}
          text="Next"
        >
          <button
            className="next"
            onClick={[Function]}
          >
            Next
          </button>
        </Button>
        <Button
          className="prev"
          fn={[Function]}
          text="Prev"
        >
          <button
            className="prev"
            onClick={[Function]}
          >
            Prev
          </button>
        </Button>
      </Fragment>
      <JSXStyle
        css="div.jsx-2081515553{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.layout.jsx-2081515553{margin:auto;max-width:50em;min-height:100vh;}.main.jsx-2081515553{background-color:lightblue;height:65vh;padding:2em 3em;}"
        styleId="2081515553"
      />
    </div>
  </FlexContainer>
</Frame>
`;
